--- a/src/index.css
+++ b/src/index.css
@@ -174,10 +174,14 @@ and 'b'. The '.' represents an empty cell on the grid. */
 .message-popup {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 40%;
   transform: translate(-50%, -50%);
   width: calc(var(--tile-size) * 10);
   height: calc(var(--tile-size) * 10);
   background-color: rgba(255, 255, 255, 0.5);
   text-align: center;
+}
+
+.message-popup.hidden {
+  display: none;
 }
