--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,23 @@
   --border-bottom-color: rgba(0, 0, 0, 0.5);
 
   /* Square Colors:  background colors for the squares.*/
-  --color-0: #eaeaea;
+  /* --color-0: #eaeaea;
   --color-1: #ff6600;
   --color-2: #eec900;
   --color-3: #0000ff;
   --color-4: #cc00ff;
   --color-5: #00ff00;
   --color-6: #66ccff;
-  --color-7: #ff0000;
+  --color-7: #ff0000; */
+
+  --color-0: #eaeaea;
+  --color-1: #66ccff;
+  --color-2:  #cc00ff;
+  --color-3: #ff6600;
+  --color-4: #0000ff;
+  --color-5: #ff0000;
+  --color-6: #00ff00;
+  --color-7: #eec900;
 
   /* Button Colors */
   --button-color-t: rgba(200, 200, 200, 1);
